# PyDiagno

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  CODING_STANDARDS.md  CONTRIBUTING.md  OWNERS  README.md  pydiagno_config.yaml  pyproject.toml  renovate.json  tox.ini
.github/workflows/: ci.yml
src/pydiagno/: config.py  plugin.py
tests/: conftest.py  test_config.py  test_config_edge_cases.py  test_plugin.py  test_pydiagno.py
