[tool.poetry]
name = "pydiagno"
version = "0.1.0"
description = "A pytest plugin for intelligent test failure analysis using LLMs"
authors = ["PyDiagno Contributors"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "pydiagno", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.0"
pyyaml = "^6.0"
transformers = "^4.0"
langchain = "^0.1.0"

[tool.poetry.dev-dependencies]
black = "^23.0"
isort = "^5.0"
flake8 = "^6.0"
mypy = "1.9"
pytest-cov = "^4.0"
tox = "^4.0"
bandit = "^1.7.5"
safety = "^2.3.5"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."pytest11"]
pydiagno = "pydiagno.plugin"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
ignore_missing_imports = true
strict = true
